--- a/app/src/main/res/layout/item_admin_loan.xml
+++ b/app/src/main/res/layout/item_admin_loan.xml
@@ -104,7 +104,7 @@
                 android:id="@+id/tvDuration"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="10 months"
+                android:text="5 years"
                 android:textStyle="bold"
                 android:textSize="14sp" />
         </LinearLayout>
@@ -119,7 +119,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Daily Payment:"
+                android:text="Monthly Payment:"
                 android:textColor="@color/accent"
                 android:textSize="14sp" />
 
